compiler/crates/types/tests/typeerr/stdlib_return_mismatch.th
ให้ n: ข้อความ = คณิต.สุ่ม();
